# alien-tap-backend

./: .gitignore  AFTER_RUST_INSTALL.md  COMPLIANCE_CHECK.md  Cargo.toml  DEV_MODE.md  Dockerfile  FLUTTER_SCREENS_AND_FLOW.md  FLUTTER_TELEGRAM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL_RUST.md  INTEGRATION_EXAMPLE.md  Makefile  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_PROJECT.md  SETUP_PGADMIN.md  START_HERE.md  TELEGRAM_DOCUMENTATION.md  create_database.sql  docker-compose.yml  env.example  generate_hash.js  generate_test_hash.md  setup.sh  setup_local.sh  test_telegram_hash.py  test_telegram_verification.py
migrations/: 20240101000001_create_tables.sql
src/: app_state.rs  config.rs  db.rs  main.rs
src/models/: claim.rs  mod.rs  score.rs  user.rs
src/routes/: auth.rs  claim.rs  game.rs  mod.rs
src/utils/: errors.rs  jwt.rs  mod.rs  telegram.rs
