[package]
name = "alien-tap-backend"
version = "0.1.0"
edition = "2021"
default-run = "alien-tap-backend"

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"

[[bin]]
name = "debug_format"
path = "src/bin/debug_format.rs"

[[bin]]
name = "test_check_string"
path = "src/bin/test_check_string.rs"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
